bnfc/ParCola.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParCola.y
-----------------------------------------------------------------------------

state 244 contains 4 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pContract -> Contract                       (0)
	%start_pComponent -> Component                     (1)
	%start_pDefinition -> Definition                   (2)
	%start_pSimpleDefinition -> SimpleDefinition       (3)
	%start_pNumericalExpression -> NumericalExpression   (4)
	%start_pOperator -> Operator                       (5)
	%start_pConditionalDefinition -> ConditionalDefinition   (6)
	%start_pStatement -> Statement                     (7)
	%start_pConditionalStatement -> ConditionalStatement   (8)
	%start_pSimpleStatement -> SimpleStatement         (9)
	%start_pCondition -> Condition                     (10)
	%start_pSimpleCondition -> SimpleCondition         (11)
	%start_pBooleanExpression -> BooleanExpression     (12)
	%start_pID -> ID                                   (13)
	%start_pHolds -> Holds                             (14)
	%start_pSubject -> Subject                         (15)
	%start_pVerb -> Verb                               (16)
	%start_pVerbStatus -> VerbStatus                   (17)
	%start_pComparison -> Comparison                   (18)
	%start_pEqual -> Equal                             (19)
	%start_pMore -> More                               (20)
	%start_pModalVerb -> ModalVerb                     (21)
	%start_pObligation -> Obligation                   (22)
	%start_pDate -> Date                               (23)
	%start_pTemporalQuantifier -> TemporalQuantifier   (24)
	%start_pTemporalRange -> TemporalRange             (25)
	%start_pMonth -> Month                             (26)
	%start_pObject -> Object                           (27)
	%start_pNumericalObject -> NumericalObject         (28)
	%start_pPounds -> Pounds                           (29)
	%start_pDollars -> Dollars                         (30)
	%start_pEuros -> Euros                             (31)
	%start_pNonNumericalObject -> NonNumericalObject   (32)
	%start_pNum -> Num                                 (33)
	%start_pAdjective -> Adjective                     (34)
	%start_pReceiver -> Receiver                       (35)
	Ident -> L_Ident                                   (36)
	Integer -> L_integ                                 (37)
	String -> L_quoted                                 (38)
	Contract ->                                        (39)
	Contract -> Component                              (40)
	Contract -> Component 'C-AND' Contract             (41)
	Component -> Definition                            (42)
	Component -> ConditionalDefinition                 (43)
	Component -> Statement                             (44)
	Component -> ConditionalStatement                  (45)
	Definition -> SimpleDefinition                     (46)
	Definition -> SimpleDefinition 'AND' Definition    (47)
	SimpleDefinition -> ID Subject 'IS' Subject        (48)
	SimpleDefinition -> ID Subject 'EQUALS' NumericalExpression   (49)
	NumericalExpression -> Num                         (50)
	NumericalExpression -> NumericalObject             (51)
	NumericalExpression -> NumericalExpression Operator NumericalExpression   (52)
	Operator -> 'PLUS'                                 (53)
	Operator -> 'MINUS'                                (54)
	Operator -> 'TIMES'                                (55)
	Operator -> 'DIVIDE'                               (56)
	ConditionalDefinition -> Definition 'IF' Condition   (57)
	ConditionalDefinition -> 'IF' Condition 'THEN' Definition   (58)
	Statement -> SimpleStatement                       (59)
	Statement -> SimpleStatement 'OR' Statement        (60)
	Statement -> SimpleStatement 'AND' Statement       (61)
	ConditionalStatement -> Statement 'IF' Condition   (62)
	ConditionalStatement -> 'IF' Condition 'THEN' Statement   (63)
	SimpleStatement -> ID Holds Subject ModalVerb Verb Object Receiver Date   (64)
	SimpleStatement -> ID Holds Subject Date ModalVerb Verb Object Receiver   (65)
	SimpleStatement -> ID Holds Date Subject ModalVerb Verb Object Receiver   (66)
	SimpleStatement -> ID Subject ModalVerb Verb Object Receiver Date   (67)
	SimpleStatement -> ID Subject Date ModalVerb Verb Object Receiver   (68)
	SimpleStatement -> ID Date Subject ModalVerb Verb Object Receiver   (69)
	Condition -> SimpleCondition                       (70)
	Condition -> SimpleCondition 'OR' Condition        (71)
	Condition -> SimpleCondition 'AND' Condition       (72)
	SimpleCondition -> ID Holds Subject VerbStatus Object Receiver Date   (73)
	SimpleCondition -> ID Holds Subject Date VerbStatus Object Receiver   (74)
	SimpleCondition -> ID Holds Date Subject VerbStatus Object Receiver   (75)
	SimpleCondition -> ID Holds Subject ModalVerb Verb Object Receiver Date   (76)
	SimpleCondition -> ID Holds BooleanExpression      (77)
	SimpleCondition -> ID Subject VerbStatus Object Receiver Date   (78)
	SimpleCondition -> ID Subject Date VerbStatus Object Receiver   (79)
	SimpleCondition -> ID Date Subject VerbStatus Object Receiver   (80)
	SimpleCondition -> ID Subject ModalVerb Verb Object Receiver Date   (81)
	SimpleCondition -> ID BooleanExpression            (82)
	BooleanExpression -> Subject VerbStatus Comparison Subject   (83)
	ID -> '[' Num ']'                                  (84)
	ID -> '[' Num '(' Num ')' ']'                      (85)
	Holds -> 'it' 'is' 'the' 'case' 'that'             (86)
	Holds -> 'it' 'is' 'not' 'the' 'case' 'that'       (87)
	Subject -> String                                  (88)
	Subject -> Ident                                   (89)
	Verb -> 'deliver'                                  (90)
	Verb -> 'pay'                                      (91)
	Verb -> 'charge'                                   (92)
	Verb -> 'refund'                                   (93)
	VerbStatus -> 'delivered'                          (94)
	VerbStatus -> 'paid'                               (95)
	VerbStatus -> 'charged'                            (96)
	VerbStatus -> 'refunded'                           (97)
	Comparison -> 'less' 'than'                        (98)
	Comparison -> Equal                                (99)
	Comparison -> More                                 (100)
	Equal -> 'equals'                                  (101)
	Equal -> 'equal' 'to'                              (102)
	More -> 'more' 'than'                              (103)
	More -> 'greater' 'than'                           (104)
	ModalVerb -> Obligation                            (105)
	ModalVerb -> 'may'                                 (106)
	ModalVerb -> 'is' 'forbidden' 'to'                 (107)
	Obligation -> 'shall'                              (108)
	Obligation -> 'must'                               (109)
	Date -> 'on' 'the' Num Month Num                   (110)
	Date -> 'on' 'ANYDATE'                             (111)
	Date -> 'on' 'ADATE'                               (112)
	Date -> 'on' 'THEDATE'                             (113)
	Date -> TemporalQuantifier Month                   (114)
	Date -> TemporalQuantifier Num                     (115)
	Date -> TemporalRange                              (116)
	TemporalQuantifier -> 'within'                     (117)
	TemporalQuantifier -> 'after'                      (118)
	TemporalQuantifier -> 'before'                     (119)
	TemporalQuantifier -> 'in'                         (120)
	TemporalRange -> 'between' Month 'and' Month       (121)
	TemporalRange -> 'between' Num 'and' Num           (122)
	Month -> 'January'                                 (123)
	Month -> 'February'                                (124)
	Month -> 'March'                                   (125)
	Month -> 'April'                                   (126)
	Month -> 'May'                                     (127)
	Month -> 'June'                                    (128)
	Month -> 'July'                                    (129)
	Month -> 'August'                                  (130)
	Month -> 'September'                               (131)
	Month -> 'October'                                 (132)
	Month -> 'November'                                (133)
	Month -> 'December'                                (134)
	Object -> NumericalObject                          (135)
	Object -> NonNumericalObject                       (136)
	Object -> Adjective NonNumericalObject             (137)
	Object -> 'between' NumericalObject 'and' NumericalObject   (138)
	NumericalObject -> Pounds Num                      (139)
	NumericalObject -> Dollars Num                     (140)
	NumericalObject -> Euros Num                       (141)
	NumericalObject -> 'AMOUNT' Subject                (142)
	Pounds -> 'GBP'                                    (143)
	Pounds -> 'POUNDS'                                 (144)
	Pounds -> 'quid'                                   (145)
	Dollars -> 'USD'                                   (146)
	Dollars -> 'DOLLARS'                               (147)
	Dollars -> 'buck'                                  (148)
	Euros -> 'EUR'                                     (149)
	Euros -> 'EUROS'                                   (150)
	NonNumericalObject -> 'SOMECURRENCY' Subject       (151)
	NonNumericalObject -> 'REPORT' Subject             (152)
	NonNumericalObject -> 'NAMEDOBJECT' Subject        (153)
	NonNumericalObject -> 'OTHEROBJECT' Subject        (154)
	Num -> Integer                                     (155)
	Adjective -> 'ADJECTIVE' Subject                   (156)
	Receiver -> 'to' Subject                           (157)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'ADATE'        { PT _ (TS _ 3) }
	'ADJECTIVE'    { PT _ (TS _ 4) }
	'AMOUNT'       { PT _ (TS _ 5) }
	'AND'          { PT _ (TS _ 6) }
	'ANYDATE'      { PT _ (TS _ 7) }
	'April'        { PT _ (TS _ 8) }
	'August'       { PT _ (TS _ 9) }
	'C-AND'        { PT _ (TS _ 10) }
	'DIVIDE'       { PT _ (TS _ 11) }
	'DOLLARS'      { PT _ (TS _ 12) }
	'December'     { PT _ (TS _ 13) }
	'EQUALS'       { PT _ (TS _ 14) }
	'EUR'          { PT _ (TS _ 15) }
	'EUROS'        { PT _ (TS _ 16) }
	'February'     { PT _ (TS _ 17) }
	'GBP'          { PT _ (TS _ 18) }
	'IF'           { PT _ (TS _ 19) }
	'IS'           { PT _ (TS _ 20) }
	'January'      { PT _ (TS _ 21) }
	'July'         { PT _ (TS _ 22) }
	'June'         { PT _ (TS _ 23) }
	'MINUS'        { PT _ (TS _ 24) }
	'March'        { PT _ (TS _ 25) }
	'May'          { PT _ (TS _ 26) }
	'NAMEDOBJECT'  { PT _ (TS _ 27) }
	'November'     { PT _ (TS _ 28) }
	'OR'           { PT _ (TS _ 29) }
	'OTHEROBJECT'  { PT _ (TS _ 30) }
	'October'      { PT _ (TS _ 31) }
	'PLUS'         { PT _ (TS _ 32) }
	'POUNDS'       { PT _ (TS _ 33) }
	'REPORT'       { PT _ (TS _ 34) }
	'SOMECURRENCY' { PT _ (TS _ 35) }
	'September'    { PT _ (TS _ 36) }
	'THEDATE'      { PT _ (TS _ 37) }
	'THEN'         { PT _ (TS _ 38) }
	'TIMES'        { PT _ (TS _ 39) }
	'USD'          { PT _ (TS _ 40) }
	'['            { PT _ (TS _ 41) }
	']'            { PT _ (TS _ 42) }
	'after'        { PT _ (TS _ 43) }
	'and'          { PT _ (TS _ 44) }
	'before'       { PT _ (TS _ 45) }
	'between'      { PT _ (TS _ 46) }
	'buck'         { PT _ (TS _ 47) }
	'case'         { PT _ (TS _ 48) }
	'charge'       { PT _ (TS _ 49) }
	'charged'      { PT _ (TS _ 50) }
	'deliver'      { PT _ (TS _ 51) }
	'delivered'    { PT _ (TS _ 52) }
	'equal'        { PT _ (TS _ 53) }
	'equals'       { PT _ (TS _ 54) }
	'forbidden'    { PT _ (TS _ 55) }
	'greater'      { PT _ (TS _ 56) }
	'in'           { PT _ (TS _ 57) }
	'is'           { PT _ (TS _ 58) }
	'it'           { PT _ (TS _ 59) }
	'less'         { PT _ (TS _ 60) }
	'may'          { PT _ (TS _ 61) }
	'more'         { PT _ (TS _ 62) }
	'must'         { PT _ (TS _ 63) }
	'not'          { PT _ (TS _ 64) }
	'on'           { PT _ (TS _ 65) }
	'paid'         { PT _ (TS _ 66) }
	'pay'          { PT _ (TS _ 67) }
	'quid'         { PT _ (TS _ 68) }
	'refund'       { PT _ (TS _ 69) }
	'refunded'     { PT _ (TS _ 70) }
	'shall'        { PT _ (TS _ 71) }
	'than'         { PT _ (TS _ 72) }
	'that'         { PT _ (TS _ 73) }
	'the'          { PT _ (TS _ 74) }
	'to'           { PT _ (TS _ 75) }
	'within'       { PT _ (TS _ 76) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pContract rule  0
	%start_pComponent rule  1
	%start_pDefinition rule  2
	%start_pSimpleDefinition rule  3
	%start_pNumericalExpression rule  4
	%start_pOperator rule  5
	%start_pConditionalDefinition rule  6
	%start_pStatement rule  7
	%start_pConditionalStatement rule  8
	%start_pSimpleStatement rule  9
	%start_pCondition rule  10
	%start_pSimpleCondition rule  11
	%start_pBooleanExpression rule  12
	%start_pID      rule  13
	%start_pHolds   rule  14
	%start_pSubject rule  15
	%start_pVerb    rule  16
	%start_pVerbStatus rule  17
	%start_pComparison rule  18
	%start_pEqual   rule  19
	%start_pMore    rule  20
	%start_pModalVerb rule  21
	%start_pObligation rule  22
	%start_pDate    rule  23
	%start_pTemporalQuantifier rule  24
	%start_pTemporalRange rule  25
	%start_pMonth   rule  26
	%start_pObject  rule  27
	%start_pNumericalObject rule  28
	%start_pPounds  rule  29
	%start_pDollars rule  30
	%start_pEuros   rule  31
	%start_pNonNumericalObject rule  32
	%start_pNum     rule  33
	%start_pAdjective rule  34
	%start_pReceiver rule  35
	Ident           rule  36
	Integer         rule  37
	String          rule  38
	Contract        rules 39, 40, 41
	Component       rules 42, 43, 44, 45
	Definition      rules 46, 47
	SimpleDefinition rules 48, 49
	NumericalExpression rules 50, 51, 52
	Operator        rules 53, 54, 55, 56
	ConditionalDefinition rules 57, 58
	Statement       rules 59, 60, 61
	ConditionalStatement rules 62, 63
	SimpleStatement rules 64, 65, 66, 67, 68, 69
	Condition       rules 70, 71, 72
	SimpleCondition rules 73, 74, 75, 76, 77, 78, 79, 80, 81, 82
	BooleanExpression rule  83
	ID              rules 84, 85
	Holds           rules 86, 87
	Subject         rules 88, 89
	Verb            rules 90, 91, 92, 93
	VerbStatus      rules 94, 95, 96, 97
	Comparison      rules 98, 99, 100
	Equal           rules 101, 102
	More            rules 103, 104
	ModalVerb       rules 105, 106, 107
	Obligation      rules 108, 109
	Date            rules 110, 111, 112, 113, 114, 115, 116
	TemporalQuantifier rules 117, 118, 119, 120
	TemporalRange   rules 121, 122
	Month           rules 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134
	Object          rules 135, 136, 137, 138
	NumericalObject rules 139, 140, 141, 142
	Pounds          rules 143, 144, 145
	Dollars         rules 146, 147, 148
	Euros           rules 149, 150
	NonNumericalObject rules 151, 152, 153, 154
	Num             rule  155
	Adjective       rule  156
	Receiver        rule  157

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pContract -> . Contract                      (rule 0)

	'IF'           shift, and enter state 164
	'['            shift, and enter state 129
	%eof           reduce using rule 39

	Contract       goto state 165
	Component      goto state 166
	Definition     goto state 159
	SimpleDefinitiongoto state 144
	ConditionalDefinitiongoto state 160
	Statement      goto state 161
	ConditionalStatementgoto state 162
	SimpleStatementgoto state 140
	ID             goto state 163

State 1

	%start_pComponent -> . Component                    (rule 1)

	'IF'           shift, and enter state 164
	'['            shift, and enter state 129

	Component      goto state 158
	Definition     goto state 159
	SimpleDefinitiongoto state 144
	ConditionalDefinitiongoto state 160
	Statement      goto state 161
	ConditionalStatementgoto state 162
	SimpleStatementgoto state 140
	ID             goto state 163

State 2

	%start_pDefinition -> . Definition                  (rule 2)

	'['            shift, and enter state 129

	Definition     goto state 157
	SimpleDefinitiongoto state 144
	ID             goto state 146

State 3

	%start_pSimpleDefinition -> . SimpleDefinition      (rule 3)

	'['            shift, and enter state 129

	SimpleDefinitiongoto state 156
	ID             goto state 146

State 4

	%start_pNumericalExpression -> . NumericalExpression    (rule 4)

	'AMOUNT'       shift, and enter state 65
	'DOLLARS'      shift, and enter state 54
	'EUR'          shift, and enter state 51
	'EUROS'        shift, and enter state 52
	'GBP'          shift, and enter state 58
	'POUNDS'       shift, and enter state 59
	'USD'          shift, and enter state 55
	'buck'         shift, and enter state 56
	'quid'         shift, and enter state 60
	L_integ        shift, and enter state 44

	Integer        goto state 42
	NumericalExpressiongoto state 153
	NumericalObjectgoto state 154
	Pounds         goto state 62
	Dollars        goto state 63
	Euros          goto state 64
	Num            goto state 155

State 5

	%start_pOperator -> . Operator                      (rule 5)

	'DIVIDE'       shift, and enter state 149
	'MINUS'        shift, and enter state 150
	'PLUS'         shift, and enter state 151
	'TIMES'        shift, and enter state 152

	Operator       goto state 148

State 6

	%start_pConditionalDefinition -> . ConditionalDefinition    (rule 6)

	'IF'           shift, and enter state 147
	'['            shift, and enter state 129

	Definition     goto state 143
	SimpleDefinitiongoto state 144
	ConditionalDefinitiongoto state 145
	ID             goto state 146

State 7

	%start_pStatement -> . Statement                    (rule 7)

	'['            shift, and enter state 129

	Statement      goto state 142
	SimpleStatementgoto state 140
	ID             goto state 137

State 8

	%start_pConditionalStatement -> . ConditionalStatement    (rule 8)

	'IF'           shift, and enter state 141
	'['            shift, and enter state 129

	Statement      goto state 138
	ConditionalStatementgoto state 139
	SimpleStatementgoto state 140
	ID             goto state 137

State 9

	%start_pSimpleStatement -> . SimpleStatement        (rule 9)

	'['            shift, and enter state 129

	SimpleStatementgoto state 136
	ID             goto state 137

State 10

	%start_pCondition -> . Condition                    (rule 10)

	'['            shift, and enter state 129

	Condition      goto state 134
	SimpleConditiongoto state 135
	ID             goto state 133

State 11

	%start_pSimpleCondition -> . SimpleCondition        (rule 11)

	'['            shift, and enter state 129

	SimpleConditiongoto state 132
	ID             goto state 133

State 12

	%start_pBooleanExpression -> . BooleanExpression    (rule 12)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	BooleanExpressiongoto state 130
	Subject        goto state 131

State 13

	%start_pID -> . ID                                  (rule 13)

	'['            shift, and enter state 129

	ID             goto state 128

State 14

	%start_pHolds -> . Holds                            (rule 14)

	'it'           shift, and enter state 127

	Holds          goto state 126

State 15

	%start_pSubject -> . Subject                        (rule 15)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 124

State 16

	%start_pVerb -> . Verb                              (rule 16)

	'charge'       shift, and enter state 118
	'deliver'      shift, and enter state 119
	'pay'          shift, and enter state 120
	'refund'       shift, and enter state 121

	Verb           goto state 117

State 17

	%start_pVerbStatus -> . VerbStatus                  (rule 17)

	'charged'      shift, and enter state 113
	'delivered'    shift, and enter state 114
	'paid'         shift, and enter state 115
	'refunded'     shift, and enter state 116

	VerbStatus     goto state 112

State 18

	%start_pComparison -> . Comparison                  (rule 18)

	'equal'        shift, and enter state 106
	'equals'       shift, and enter state 107
	'greater'      shift, and enter state 103
	'less'         shift, and enter state 111
	'more'         shift, and enter state 104

	Comparison     goto state 108
	Equal          goto state 109
	More           goto state 110

State 19

	%start_pEqual -> . Equal                            (rule 19)

	'equal'        shift, and enter state 106
	'equals'       shift, and enter state 107

	Equal          goto state 105

State 20

	%start_pMore -> . More                              (rule 20)

	'greater'      shift, and enter state 103
	'more'         shift, and enter state 104

	More           goto state 102

State 21

	%start_pModalVerb -> . ModalVerb                    (rule 21)

	'is'           shift, and enter state 100
	'may'          shift, and enter state 101
	'must'         shift, and enter state 96
	'shall'        shift, and enter state 97

	ModalVerb      goto state 98
	Obligation     goto state 99

State 22

	%start_pObligation -> . Obligation                  (rule 22)

	'must'         shift, and enter state 96
	'shall'        shift, and enter state 97

	Obligation     goto state 95

State 23

	%start_pDate -> . Date                              (rule 23)

	'after'        shift, and enter state 87
	'before'       shift, and enter state 88
	'between'      shift, and enter state 85
	'in'           shift, and enter state 89
	'on'           shift, and enter state 94
	'within'       shift, and enter state 90

	Date           goto state 91
	TemporalQuantifiergoto state 92
	TemporalRange  goto state 93

State 24

	%start_pTemporalQuantifier -> . TemporalQuantifier    (rule 24)

	'after'        shift, and enter state 87
	'before'       shift, and enter state 88
	'in'           shift, and enter state 89
	'within'       shift, and enter state 90

	TemporalQuantifiergoto state 86

State 25

	%start_pTemporalRange -> . TemporalRange            (rule 25)

	'between'      shift, and enter state 85

	TemporalRange  goto state 84

State 26

	%start_pMonth -> . Month                            (rule 26)

	'April'        shift, and enter state 72
	'August'       shift, and enter state 73
	'December'     shift, and enter state 74
	'February'     shift, and enter state 75
	'January'      shift, and enter state 76
	'July'         shift, and enter state 77
	'June'         shift, and enter state 78
	'March'        shift, and enter state 79
	'May'          shift, and enter state 80
	'November'     shift, and enter state 81
	'October'      shift, and enter state 82
	'September'    shift, and enter state 83

	Month          goto state 71

State 27

	%start_pObject -> . Object                          (rule 27)

	'ADJECTIVE'    shift, and enter state 41
	'AMOUNT'       shift, and enter state 65
	'DOLLARS'      shift, and enter state 54
	'EUR'          shift, and enter state 51
	'EUROS'        shift, and enter state 52
	'GBP'          shift, and enter state 58
	'NAMEDOBJECT'  shift, and enter state 46
	'OTHEROBJECT'  shift, and enter state 47
	'POUNDS'       shift, and enter state 59
	'REPORT'       shift, and enter state 48
	'SOMECURRENCY' shift, and enter state 49
	'USD'          shift, and enter state 55
	'between'      shift, and enter state 70
	'buck'         shift, and enter state 56
	'quid'         shift, and enter state 60

	Object         goto state 66
	NumericalObjectgoto state 67
	Pounds         goto state 62
	Dollars        goto state 63
	Euros          goto state 64
	NonNumericalObjectgoto state 68
	Adjective      goto state 69

State 28

	%start_pNumericalObject -> . NumericalObject        (rule 28)

	'AMOUNT'       shift, and enter state 65
	'DOLLARS'      shift, and enter state 54
	'EUR'          shift, and enter state 51
	'EUROS'        shift, and enter state 52
	'GBP'          shift, and enter state 58
	'POUNDS'       shift, and enter state 59
	'USD'          shift, and enter state 55
	'buck'         shift, and enter state 56
	'quid'         shift, and enter state 60

	NumericalObjectgoto state 61
	Pounds         goto state 62
	Dollars        goto state 63
	Euros          goto state 64

State 29

	%start_pPounds -> . Pounds                          (rule 29)

	'GBP'          shift, and enter state 58
	'POUNDS'       shift, and enter state 59
	'quid'         shift, and enter state 60

	Pounds         goto state 57

State 30

	%start_pDollars -> . Dollars                        (rule 30)

	'DOLLARS'      shift, and enter state 54
	'USD'          shift, and enter state 55
	'buck'         shift, and enter state 56

	Dollars        goto state 53

State 31

	%start_pEuros -> . Euros                            (rule 31)

	'EUR'          shift, and enter state 51
	'EUROS'        shift, and enter state 52

	Euros          goto state 50

State 32

	%start_pNonNumericalObject -> . NonNumericalObject    (rule 32)

	'NAMEDOBJECT'  shift, and enter state 46
	'OTHEROBJECT'  shift, and enter state 47
	'REPORT'       shift, and enter state 48
	'SOMECURRENCY' shift, and enter state 49

	NonNumericalObjectgoto state 45

State 33

	%start_pNum -> . Num                                (rule 33)

	L_integ        shift, and enter state 44

	Integer        goto state 42
	Num            goto state 43

State 34

	%start_pAdjective -> . Adjective                    (rule 34)

	'ADJECTIVE'    shift, and enter state 41

	Adjective      goto state 40

State 35

	%start_pReceiver -> . Receiver                      (rule 35)

	'to'           shift, and enter state 39

	Receiver       goto state 38

State 36

	Ident -> . L_Ident                                  (rule 36)

	L_Ident        shift, and enter state 37


State 37

	Ident -> L_Ident .                                  (rule 36)

	'AND'          reduce using rule 36
	'C-AND'        reduce using rule 36
	'DIVIDE'       reduce using rule 36
	'EQUALS'       reduce using rule 36
	'IF'           reduce using rule 36
	'IS'           reduce using rule 36
	'MINUS'        reduce using rule 36
	'NAMEDOBJECT'  reduce using rule 36
	'OR'           reduce using rule 36
	'OTHEROBJECT'  reduce using rule 36
	'PLUS'         reduce using rule 36
	'REPORT'       reduce using rule 36
	'SOMECURRENCY' reduce using rule 36
	'THEN'         reduce using rule 36
	'TIMES'        reduce using rule 36
	'after'        reduce using rule 36
	'and'          reduce using rule 36
	'before'       reduce using rule 36
	'between'      reduce using rule 36
	'charged'      reduce using rule 36
	'delivered'    reduce using rule 36
	'in'           reduce using rule 36
	'is'           reduce using rule 36
	'may'          reduce using rule 36
	'must'         reduce using rule 36
	'on'           reduce using rule 36
	'paid'         reduce using rule 36
	'refunded'     reduce using rule 36
	'shall'        reduce using rule 36
	'to'           reduce using rule 36
	'within'       reduce using rule 36
	%eof           reduce using rule 36


State 38

	%start_pReceiver -> Receiver .                      (rule 35)

	%eof           accept


State 39

	Receiver -> 'to' . Subject                          (rule 157)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 215

State 40

	%start_pAdjective -> Adjective .                    (rule 34)

	%eof           accept


State 41

	Adjective -> 'ADJECTIVE' . Subject                  (rule 156)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 214

State 42

	Num -> Integer .                                    (rule 155)

	'('            reduce using rule 155
	')'            reduce using rule 155
	'AND'          reduce using rule 155
	'April'        reduce using rule 155
	'August'       reduce using rule 155
	'C-AND'        reduce using rule 155
	'DIVIDE'       reduce using rule 155
	'December'     reduce using rule 155
	'February'     reduce using rule 155
	'IF'           reduce using rule 155
	'January'      reduce using rule 155
	'July'         reduce using rule 155
	'June'         reduce using rule 155
	'MINUS'        reduce using rule 155
	'March'        reduce using rule 155
	'May'          reduce using rule 155
	'November'     reduce using rule 155
	'OR'           reduce using rule 155
	'October'      reduce using rule 155
	'PLUS'         reduce using rule 155
	'September'    reduce using rule 155
	'THEN'         reduce using rule 155
	'TIMES'        reduce using rule 155
	']'            reduce using rule 155
	'and'          reduce using rule 155
	'charged'      reduce using rule 155
	'delivered'    reduce using rule 155
	'is'           reduce using rule 155
	'may'          reduce using rule 155
	'must'         reduce using rule 155
	'paid'         reduce using rule 155
	'refunded'     reduce using rule 155
	'shall'        reduce using rule 155
	'to'           reduce using rule 155
	L_Ident        reduce using rule 155
	L_quoted       reduce using rule 155
	%eof           reduce using rule 155


State 43

	%start_pNum -> Num .                                (rule 33)

	%eof           accept


State 44

	Integer -> L_integ .                                (rule 37)

	'('            reduce using rule 37
	')'            reduce using rule 37
	'AND'          reduce using rule 37
	'April'        reduce using rule 37
	'August'       reduce using rule 37
	'C-AND'        reduce using rule 37
	'DIVIDE'       reduce using rule 37
	'December'     reduce using rule 37
	'February'     reduce using rule 37
	'IF'           reduce using rule 37
	'January'      reduce using rule 37
	'July'         reduce using rule 37
	'June'         reduce using rule 37
	'MINUS'        reduce using rule 37
	'March'        reduce using rule 37
	'May'          reduce using rule 37
	'November'     reduce using rule 37
	'OR'           reduce using rule 37
	'October'      reduce using rule 37
	'PLUS'         reduce using rule 37
	'September'    reduce using rule 37
	'THEN'         reduce using rule 37
	'TIMES'        reduce using rule 37
	']'            reduce using rule 37
	'and'          reduce using rule 37
	'charged'      reduce using rule 37
	'delivered'    reduce using rule 37
	'is'           reduce using rule 37
	'may'          reduce using rule 37
	'must'         reduce using rule 37
	'paid'         reduce using rule 37
	'refunded'     reduce using rule 37
	'shall'        reduce using rule 37
	'to'           reduce using rule 37
	L_Ident        reduce using rule 37
	L_quoted       reduce using rule 37
	%eof           reduce using rule 37


State 45

	%start_pNonNumericalObject -> NonNumericalObject .    (rule 32)

	%eof           accept


State 46

	NonNumericalObject -> 'NAMEDOBJECT' . Subject       (rule 153)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 213

State 47

	NonNumericalObject -> 'OTHEROBJECT' . Subject       (rule 154)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 212

State 48

	NonNumericalObject -> 'REPORT' . Subject            (rule 152)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 211

State 49

	NonNumericalObject -> 'SOMECURRENCY' . Subject      (rule 151)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 210

State 50

	%start_pEuros -> Euros .                            (rule 31)

	%eof           accept


State 51

	Euros -> 'EUR' .                                    (rule 149)

	L_integ        reduce using rule 149
	%eof           reduce using rule 149


State 52

	Euros -> 'EUROS' .                                  (rule 150)

	L_integ        reduce using rule 150
	%eof           reduce using rule 150


State 53

	%start_pDollars -> Dollars .                        (rule 30)

	%eof           accept


State 54

	Dollars -> 'DOLLARS' .                              (rule 147)

	L_integ        reduce using rule 147
	%eof           reduce using rule 147


State 55

	Dollars -> 'USD' .                                  (rule 146)

	L_integ        reduce using rule 146
	%eof           reduce using rule 146


State 56

	Dollars -> 'buck' .                                 (rule 148)

	L_integ        reduce using rule 148
	%eof           reduce using rule 148


State 57

	%start_pPounds -> Pounds .                          (rule 29)

	%eof           accept


State 58

	Pounds -> 'GBP' .                                   (rule 143)

	L_integ        reduce using rule 143
	%eof           reduce using rule 143


State 59

	Pounds -> 'POUNDS' .                                (rule 144)

	L_integ        reduce using rule 144
	%eof           reduce using rule 144


State 60

	Pounds -> 'quid' .                                  (rule 145)

	L_integ        reduce using rule 145
	%eof           reduce using rule 145


State 61

	%start_pNumericalObject -> NumericalObject .        (rule 28)

	%eof           accept


State 62

	NumericalObject -> Pounds . Num                     (rule 139)

	L_integ        shift, and enter state 44

	Integer        goto state 42
	Num            goto state 209

State 63

	NumericalObject -> Dollars . Num                    (rule 140)

	L_integ        shift, and enter state 44

	Integer        goto state 42
	Num            goto state 208

State 64

	NumericalObject -> Euros . Num                      (rule 141)

	L_integ        shift, and enter state 44

	Integer        goto state 42
	Num            goto state 207

State 65

	NumericalObject -> 'AMOUNT' . Subject               (rule 142)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 125

	Ident          goto state 122
	String         goto state 123
	Subject        goto state 206

State 66

	%start_pObject -> Object .                          (rule 27)

	%eof           accept


State 67

	Object -> NumericalObject .                         (rule 135)

	'to'           reduce using rule 135
	%eof           reduce using rule 135


State 68

	Object -> NonNumericalObject .                      (rule 136)

	'to'           reduce using rule 136
	%eof           reduce using rule 136


State 69

	Object -> Adjective . NonNumericalObject            (rule 137)

	'NAMEDOBJECT'  shift, and enter state 46
	'OTHEROBJECT'  shift, and enter state 47
	'REPORT'       shift, and enter state 48
	'SOMECURRENCY' shift, and enter state 49

	NonNumericalObjectgoto state 205

State 70

	Object -> 'between' . NumericalObject 'and' NumericalObject    (rule 138)

	'AMOUNT'       shift, and enter state 65
	'DOLLARS'      shift, and enter state 54
	'EUR'          shift, and enter state 51
	'EUROS'        shift, and enter state 52
	'GBP'          shift, and enter state 58
	'POUNDS'       shift, and enter state 59
	'USD'          shift, and enter state 55
	'buck'         shift, and enter state 56
	'quid'         shift, and enter state 60

	NumericalObjectgoto state 204
	Pounds         goto state 62
	Dollars        goto state 63
	Euros          goto state 64

State 71

	%start_pMonth -> Month .                            (rule 26)

	%eof           accept


State 72

	Month -> 'April' .                                  (rule 126)
